# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--0.7
#

2005-02-03 20:27:16 GMT	John Goerzen <jgoerzen@complete.org>	patch-196

    Summary:
      checkpointing
    Revision:
      missingh--head--0.7--patch-196


    modified files:
     ChangeLog Makefile testsrc/AnyDBMtest.hs


2005-02-03 15:40:24 GMT	John Goerzen <jgoerzen@complete.org>	patch-195

    Summary:
      Cleaned up temp file handling in AnyDBMTest.hs
    Revision:
      missingh--head--0.7--patch-195


    removed files:
     testsrc/tmp/.arch-ids/=id

    modified files:
     ChangeLog Makefile testsrc/AnyDBMtest.hs

    removed directories:
     testsrc/tmp testsrc/tmp/.arch-ids


2005-02-03 14:43:52 GMT	John Goerzen <jgoerzen@complete.org>	patch-194

    Summary:
      updated debian changelog
    Revision:
      missingh--head--0.7--patch-194


    modified files:
     ChangeLog debian/changelog


2005-02-02 22:26:33 GMT	John Goerzen <jgoerzen@complete.org>	patch-193

    Summary:
      Improved AnyDBM so it only requires one of keysA or toListA
    Revision:
      missingh--head--0.7--patch-193


    modified files:
     ChangeLog libsrc/MissingH/AnyDBM.hs


2005-02-02 18:19:18 GMT	John Goerzen <jgoerzen@complete.org>	patch-192

    Summary:
      Now test FiniteMap
    Revision:
      missingh--head--0.7--patch-192


    modified files:
     ChangeLog


2005-02-02 17:18:01 GMT	John Goerzen <jgoerzen@complete.org>	patch-191

    Summary:
      Finished tests for AnyDBM
    Revision:
      missingh--head--0.7--patch-191


    modified files:
     ChangeLog testsrc/AnyDBMtest.hs


2005-02-02 17:05:24 GMT	John Goerzen <jgoerzen@complete.org>	patch-190

    Summary:
      checkpointing
    Revision:
      missingh--head--0.7--patch-190


    new files:
     testsrc/tmp/.arch-ids/=id

    modified files:
     ChangeLog Makefile libsrc/MissingH/AnyDBM/StringDBM.hs
     testsrc/AnyDBMtest.hs
